--- a/student-bio.html
+++ b/student-bio.html
@@ -2,23 +2,24 @@
 <html> 
 	<head>
 		<title>Al's Student Bio</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<header>
-			<img src="https://github.com/RutgersCodingBootcamp/All-Classwork-Homework/blob/master/week-1-html-css-git-heroku/in-class-exercises-1.2/RutgersBanner.png" alt="Rutgers Coding Boot Camp">
+			<img id="bio-image" src="https://github.com/RutgersCodingBootcamp/All-Classwork-Homework/blob/master/week-1-html-css-git-heroku/in-class-exercises-1.2/RutgersBanner.png" alt="Rutgers Coding Boot Camp">
 
 			<h1>Student Bio</h1>
 
 		</header>
 
-		<div>
-			<section> 
-				<h2>Alvaro R. Martinez</h2>  
+		<div class="container">
+			<section id="main-bio"> 
+				<h2 id="name">Alvaro R. Martinez</h2>  
 				<img src="http://placehold.it/200x200" alt="Student Picture">	
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur mollis suscipit. Maecenas a dui vitae est blandit tincidunt a quis neque. In hendrerit neque id ipsum eleifend, et laoreet nunc ullamcorper. Maecenas vel interdum lectus, vel faucibus est. Maecenas facilisis ligula quis arcu semper pellentesque. Praesent urna felis, dapibus sed enim eget, euismod iaculis elit. Curabitur sed imperdiet nunc. Morbi sagittis sem quis blandit efficitur. Nulla bibendum at mi posuere fringilla. Sed pellentesque augue eget elit faucibus tempor. Curabitur mattis nisi eget lacus egestas pharetra. Ut quis leo blandit, fermentum risus nec, volutpat nisi. Integer in hendrerit enim, at suscipit erat. Suspendisse iaculis, libero ut porttitor ullamcorper, sem urna malesuada felis, quis dapibus massa nisl accumsan augue.
 				</p>
 			</section>
-			<section>  
+			<section id="contact-info">  
 				<h2>Contact Info</h2>
 				<ul>
 					<li><em>Email<em>: alcreates101@gmail.com</li>
